Fix alignment member price blob

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,6 +156,7 @@ main {
   background-color: #2b2b2b;
   color: #cacaca;
   margin: 10px;
+  margin-left: 20px;
   padding: 30px;
   border-radius: 20px;
 }
